--- a/sass/_variables.scss
+++ b/sass/_variables.scss
@@ -1,10 +1,13 @@
 /* directories */
-$img_path: "../images/";
+$img-path: "../images/";
+$img-fixes-path: "../images/";
 $font_path: "../fonts/";
    
 /* base */
 $base-color: #222;
 $link-color: #999;
+$link-hover-color: #aaa;
+$headings-color: #000;
 
 /* font-weight */
 $normal: 300;
