--- a/sass/_common.scss
+++ b/sass/_common.scss
@@ -1,1 +1,7 @@
-/* fill.me :) */
+.c-region {
+	width: $region-width;
+	padding-left: $region-padding;
+	padding-right: $region-padding;
+	margin-left: auto;
+	margin-right: auto;
+}
