--- a/sass/_fontface.scss
+++ b/sass/_fontface.scss
@@ -1,6 +1,13 @@
-/*  Download or generated font-face on:
- *	
+/*
+ * Download or generated font-face on:
+ */
+
+/*  
  *	Font Squirrel:  
  *  http://www.fontsquirrel.com 
- *
+ */
+
+/*
+ *	Font 2 web:
+ *	http://www.font2web.com/
  */
