--- a/sass/_initialization.scss
+++ b/sass/_initialization.scss
@@ -1,13 +1,3 @@
-/*
- * HTML5 Boilerplate
- *
- * What follows is the result of much research on cross-browser styling.
- * Credit left inline and big thanks to Nicolas Gallagher, Jonathan Neal,
- * Kroc Camen, and the H5BP dev community and team.
- */
-
-
-
 /* ==========================================================================
    Base styles
    ========================================================================== */
@@ -21,11 +11,11 @@ textarea {
 }
 
 body {
-	background: #e3e3e3 url($img-path+'/background.png');
+	background: #e3e3e3 url($img-path+'background__page.png');
 	font-family: "HelveticaNeue-Light", "Helvetica Neue Light", "Helvetica Neue", Helvetica, Arial, "Lucida Grande", sans-serif; 
-	font-size: 1em/*16px*/;
 	font-weight: $normal;
-    line-height: 1.4;
+	font-size: $base-fontsize;
+    line-height: $base-lineheight;
 }
 
 ::-moz-selection {
@@ -40,10 +30,7 @@ body {
 
 a {
 	color: $link-color;
-	&:hover { 
-		text-decoration: none;
-		color: $link-hover-color; 
-	}
+	&:hover { text-decoration: none; }
 }
 
 h1, h2, h3, h4, h5, h6 {
@@ -52,13 +39,15 @@ h1, h2, h3, h4, h5, h6 {
     color: $headings-color;
     
     a {
-        display: block;
         text-decoration: none;
         color: $headings-color;
     }
 }
 
-h1 {}
+h1 {
+	margin-top: 0;
+}
+
 h2 {}
 h3 {}
 h4 {}
@@ -82,9 +71,11 @@ img {
 
 
 ul {
-    list-style: url($img-path+'style_li.png');
+    list-style: url($img-path+'style__li.png');
 }
 
+p:first-child { margin-top: 0; }
+p:last-child { margin-bottom: 0; }
 
 table {
     width: 100%;
