--- a/sass/_layout.scss
+++ b/sass/_layout.scss
@@ -1,30 +1,18 @@
-.l-header-wrapper {
-	
-}
-	.l-header {
-		
-	}
-	
-.l-navigation-wrapper {
+.l-header {
 	
 }
 
-	.l-navigation {
-		
-	}
 	
-.l-body-wrapper {
+.l-nav {
 	
 }
 
-	.l-body {
-		
-	}
 	
-.l-footer-wrapper {
+.l-body {
 	
 }
 
-	.l-footer {
-		
-	}
+
+.l-footer {
+	
+}
