--- a/sass/_variables.scss
+++ b/sass/_variables.scss
@@ -1,14 +1,22 @@
 /* directories */
-$img-path: "../images/";
-$img-fixes-path: "../images/";
-$font_path: "../fonts/";
+$img-path: 		 "../images/";
+$img-path-fixes: "../images/fixes/";
+$font-path: 	 "../fonts/";
    
 /* base */
 $base-color: #222;
 $link-color: #999;
-$link-hover-color: #aaa;
 $headings-color: #000;
+$base-fontsize: 12px;
+$base-lineheight: 1.416; /*17px*/
+
+/* colors */
+$red: #b6001c;
 
 /* font-weight */
 $normal: 300;
 $bold: 600;
+
+/* measures */
+$region-width: 960px;
+$region-padding: 20px;
