--- a/sass/_common.scss
+++ b/sass/_common.scss
@@ -5,3 +5,10 @@
 	margin-left: auto;
 	margin-right: auto;
 }
+
+.c-ancients {
+	margin: 0.2em 0;
+    background: #ccc;
+    color: #000;
+    padding: 0.2em 0;
+}
