--- a/sass/style.scss
+++ b/sass/style.scss
@@ -1,8 +1,8 @@
 @charset "utf-8";
 
-@import 'compass/css3';		/* compass framework mixins							*/
+@import 'compass/css3';		/* compass framework mixins	for great justice		*/
 @import 'variables'; 		/* sass variables like base-color or image dir path	*/
-@import 'mixins'; 			/* sass mixins (kinda functions)					*/
+@import 'mixins'; 			/* app mixins (current project only)				*/
 @import 'fontface';			/* non standart fonts if required 					*/
 @import 'normalize';		/* normalize from h5bp 								*/
 @import 'initialization';	/* style init like default font, link colors etc.	*/
@@ -14,7 +14,7 @@
 
 /* Prefixes
     l- layout  ( page regions, ex: .l-header or .l-left-column )
-    b- block   ( content blocks placed in region, ex: .b-logo or .b-navigation )
+    b- block   ( content blocks placed in regions, ex: .b-logo or .b-nav )
     c- common  ( for elements that occur often, ex: .c-red-button or .c-shadowed-line )
     v- visual  ( regular class, most common in use, ex: .v-image-title or .v-phone-index )
     w- wrapper ( for wrap somthing, ex: .w-copyright-developers or .w-sidebar-center )
@@ -24,5 +24,5 @@
 
 /*
 	HTML5 Boilerplate: The web's most popular front-end template
-	http://html5boilerplate.com/
+	http://h5bp.com
 */
