--- a/sass/_fontface.scss
+++ b/sass/_fontface.scss
@@ -1,13 +1,13 @@
 /*
- * Download or generated font-face on:
+ *  Download or generated font-face here:
  */
 
 /*  
- *	Font Squirrel:  
- *  http://www.fontsquirrel.com 
+ *  Font Squirrel:
+ *  http://www.fontsquirrel.com
  */
 
 /*
- *	Font 2 web:
- *	http://www.font2web.com/
+ *  Font 2 web:
+ *  http://www.font2web.com/
  */
