--- a/sass/_initialization.scss
+++ b/sass/_initialization.scss
@@ -19,7 +19,7 @@ textarea {
 }
 
 body {
-    background: #e3e3e3 url($img-path+'background__page.png');
+    background: #e3e3e3 url($img-path+'background.png');
     font: $normal-weight #{$base-fontsize} / #{$base-lineheight} $base-family;
 }
 
@@ -78,9 +78,6 @@ h4 {
 }
 
 
-p:first-child { margin-top: 0; }
-p:last-child { margin-bottom: 0; }
-
 
 hr {
     display: block;
@@ -99,7 +96,7 @@ img {
 
 
 ul {
-    list-style: url($img-path+'style__li.png');
+
 }
 
 
@@ -138,7 +135,7 @@ form {
     fieldset {
         border: 0;
         margin: 0;
-    padding: 0;
+        padding: 0;
     }
 
     .c-row {
