--- a/sass/style.scss
+++ b/sass/style.scss
@@ -9,17 +9,9 @@ $font-path:      "../fonts/";
 @import 'fonts';             /* font-face and font-family                         */
 @import 'normalize';         /* normalize from h5bp                               */
 @import 'initialization';    /* style init like default font, link colors etc.    */
-@import 'blocks__global';    /* global blocks style                               */
-@import 'helpers';           /* helpers style (partly from h5bp)                  */
+@import 'blocks';            /* blocks - primary code                             */
+@import 'helpers';           /* helpers style like clearfix                       */
 @import 'print';             /* print style from h5bp                             */
-
-
-/*  
- *  b- block    | independent unit
- *  e- element  | child of block
- *  m- modifier | modifier of block or element
- *  h- helpers  | extra things like clearfix
- */
 
 /*
     HTML5 Boilerplate: The web's most popular front-end template
