To many changes
reset css,
new blocks like icon, button, field,
some extra default layout

--- a/sass/_blocks.scss
+++ b/sass/_blocks.scss
@@ -1,3 +1,17 @@
-@import 'blocks/page';
-@import 'blocks/region';
+@import 'blocks/icon';
+@import 'blocks/button';
+@import 'blocks/field';
+@import 'blocks/title';
+@import 'blocks/table';
+@import 'blocks/wysiwyg';
 @import 'blocks/ancients';
+@import 'blocks/logo';
+@import 'blocks/copyright';
+@import 'blocks/sidebar';
+@import 'blocks/content';
+@import 'blocks/header';
+@import 'blocks/footer';
+@import 'blocks/nav';
+@import 'blocks/body';
+@import 'blocks/region';
+@import 'blocks/page';
