--- a/sass/_fonts.scss
+++ b/sass/_fonts.scss
@@ -1,19 +1,9 @@
 $f-TrebuchetMS:  "Trebuchet MS", "Lucida Grande", "Lucida Sans Unicode", "Lucida Sans", Tahoma, sans-serif;
 $f-Helvetica:    "HelveticaNeue-Light", "Helvetica Neue Light", "Helvetica Neue", Helvetica, Arial, "Lucida Grande", sans-serif;
+$f-Tahoma:    Tahoma, Verdana, Segoe, sans-serif;
 
-$normal-weight: 300;
-$bold-weight:   600;
-
-/*
- *  Download or generated font-face here:
- */
-
-/*  
- *  Font Squirrel:
- *  http://www.fontsquirrel.com
- */
-
-/*
- *  Font 2 web:
- *  http://www.font2web.com/
- */
+// Font Squirrel:
+// http://www.fontsquirrel.com
+//
+// Font 2 web:
+// http://www.font2web.com/
