--- a/sass/style.scss
+++ b/sass/style.scss
@@ -4,16 +4,12 @@ $img-path:       "../images/";
 $img-path-fixes: "../images/fixes/";
 $font-path:      "../fonts/";
 
-@import 'compass/css3';      /* compass framework mixins for great justice        */
-@import 'mixins';            /* app mixins                                        */
-@import 'fonts';             /* font-face and font-family                         */
-@import 'normalize';         /* normalize from h5bp                               */
-@import 'initialization';    /* style init like default font, link colors etc.    */
-@import 'blocks';            /* blocks - primary code                             */
-@import 'helpers';           /* helpers style like clearfix                       */
-@import 'print';             /* print style from h5bp                             */
-
-/*
-    HTML5 Boilerplate: The web's most popular front-end template
-    http://h5bp.com
-*/
+@import 'compass/css3';      // compass framework mixins for great justice
+@import 'mixins';            // app mixins
+@import 'fonts';             // font-face and font-family
+@import 'normalize';         // normalize from h5bp
+@import 'reset';             // reset of html margins, paddings etc.
+@import 'initialization';    // style init like default font, link colors etc.
+@import 'blocks';            // blocks - primary code
+@import 'helpers';           // helpers style like clearfix
+@import 'print';             // print style from h5bp
