Small fixe, video block

--- a/sass/_blocks.scss
+++ b/sass/_blocks.scss
@@ -3,6 +3,7 @@
 @import 'blocks/field';
 @import 'blocks/title';
 @import 'blocks/table';
+@import 'blocks/video';
 @import 'blocks/wysiwyg';
 @import 'blocks/ancients';
 @import 'blocks/logo';
