--- a/sass/_reset.scss
+++ b/sass/_reset.scss
@@ -19,10 +19,15 @@ ul, ol, menu {
     list-style: none;
 }
 
+h1, h2, h3, h4, h5, h6 {
+    font-size: inherit;
+}
+
 h1, h2, h3, h4, h5, h6,
 th {
     font-weight: normal;
 }
+
 
 th {
     text-align: left;
