Secondary font variable was added

--- a/sass/_initialization.scss
+++ b/sass/_initialization.scss
@@ -1,5 +1,6 @@
 $base-family:     $f-Helvetica;
 $base-color:      #222;
+$secondary-color: #444;
 $link-color:      #999;
 $base-fontsize:   12px;
 $base-lineheight: 1.5; /*18px*/
