--- a/sass/_fonts.scss
+++ b/sass/_fonts.scss
@@ -1,9 +1,12 @@
 $f-TrebuchetMS:  "Trebuchet MS", "Lucida Grande", "Lucida Sans Unicode", "Lucida Sans", Tahoma, sans-serif;
 $f-Helvetica:    "HelveticaNeue-Light", "Helvetica Neue Light", "Helvetica Neue", Helvetica, Arial, "Lucida Grande", sans-serif;
-$f-Tahoma:    Tahoma, Verdana, Segoe, sans-serif;
+$f-Tahoma:       Tahoma, Verdana, Segoe, sans-serif;
 
 // Font Squirrel:
 // http://www.fontsquirrel.com
 //
 // Font 2 web:
 // http://www.font2web.com/
+//
+// or just @import Google fonts:
+// http://www.google.com/fonts
