--- a/sass/_initialization.scss
+++ b/sass/_initialization.scss
@@ -1,6 +1,7 @@
 $base-family:     $f-Helvetica;
 $base-color:      #222;
 $secondary-color: #444;
+$heading-color:   $base-color;
 $link-color:      #999;
 $base-fontsize:   12px;
 $base-lineheight: 1.5; /*18px*/
@@ -38,12 +39,6 @@ body {
 a {
     color: $link-color;
     &:hover { text-decoration: none; }
-}
-
-
-img {
-    vertical-align: middle;
-    max-width: 100%;
 }
 
 textarea {
