--- a/sass/blocks/_wysiwyg.scss
+++ b/sass/blocks/_wysiwyg.scss
@@ -23,17 +23,17 @@
         margin-right: 40px;
     }
 
+    img {
+        vertical-align: middle;
+        max-width: 100%;
+        height: auto;
+    }
+
     hr {
         display: block;
         height: 1px;
         border: 0;
-        border-top: 1px solid #ccc;
-    }
-
-    h1 {
-        font-size: 2em;
-        margin: 0.67em 0 0;
-        &:first-child { margin-top: 0; }
+        border-top: 1px solid $base-color;
     }
 
     h2 {
@@ -51,18 +51,6 @@
     h4 {
         font-size: 1em;
         margin: 1.33em 0 0;
-        &:first-child { margin-top: 0; }
-    }
-
-    h5 {
-        font-size: 0.83em;
-        margin: 1.67em 0 0;
-        &:first-child { margin-top: 0; }
-    }
-
-    h6 {
-        font-size: 0.67em;
-        margin: 2.33em 0 0;
         &:first-child { margin-top: 0; }
     }
 
