share meta, share pic and small changes in init

--- a/sass/_initialization.scss
+++ b/sass/_initialization.scss
@@ -4,12 +4,8 @@ $secondary-color: #444;
 $heading-color:   $base-color;
 $link-color:      #999;
 $base-fontsize:   12px;
-$base-lineheight: 1.5; /*18px*/
+$base-lineheight: 18px;
 
-
-/* ==========================================================================
-   Base styles
-   ========================================================================== */
 
 html,
 button,
