--- a/sass/blocks/_wysiwyg.scss
+++ b/sass/blocks/_wysiwyg.scss
@@ -39,18 +39,21 @@
     h2 {
         font-size: 1.5em;
         margin: 0.83em 0 0;
+        color: $heading-color;
         &:first-child { margin-top: 0; }
     }
 
     h3 {
         font-size: 1.17em;
         margin: 1em 0 0;
+        color: $heading-color;
         &:first-child { margin-top: 0; }
     }
 
     h4 {
         font-size: 1em;
         margin: 1.33em 0 0;
+        color: $heading-color;
         &:first-child { margin-top: 0; }
     }
 
