--- a/sass/blocks/_body.scss
+++ b/sass/blocks/_body.scss
@@ -2,9 +2,14 @@
 
 }
     .body__sidebar {
-
+        display: inline-block;
+        vertical-align: top;
+        width: 200px;
+        margin: 0 20px 0 0;
     }
 
     .body__content {
-
+        display: inline-block;
+        vertical-align: top;
+        width: 740px;
     }
