--- a/sass/blocks/_button.scss
+++ b/sass/blocks/_button.scss
@@ -2,6 +2,7 @@ $button-height: 24px;
 
 .button {
     text-decoration: none;
+    @include box-sizing(content-box); //case of submit or something
     display: inline-block;
     vertical-align: middle;
     height:      $button-height - 2px;       // -2px cause borders
@@ -9,13 +10,12 @@ $button-height: 24px;
     padding: 0 8px;
     border: 1px solid #0674bc;
     background: #008ed2;
-    @include box-sizing(content-box);
     @include background(linear-gradient(#00a7e1, #0095da 50%, #008cd2 51%, #0075c6));
-    @include border-radius(4px);
-    @include box-shadow(inset 0 0 0 1px rgba(255,255,255, .25));
-    cursor: pointer;
-    font-size: $button-height * 0.5;
+    border-radius: 4px;
+    box-shadow: inset 0 0 0 1px rgba(255,255,255,.25);
+    font-size: 12px;
     color: #fff;
+    cursor: pointer;
 
     &:hover {
         background: #008ed2;
@@ -40,7 +40,7 @@ $button-height: 40px;
 .button_large {
     height:      $button-height - 2px;            // -2px cause borders
     line-height: $button-height - 2px - 2px; // -2px cause borders and -2px for better vertical aligning
-    font-size:   $button-height / 2;
+    font-size:   24px;
 }
 
 
