--- a/sass/blocks/_field.scss
+++ b/sass/blocks/_field.scss
@@ -8,7 +8,7 @@ $ie8-padding: 4px;
     width: 90px;
     padding: 0 9px;
     border: 1px solid #c3c3c3;
-    @include border-radius(2px);
+    border-radius: 2px;
     font-size: 12px;
     color: #333;
 
@@ -18,37 +18,15 @@ $ie8-padding: 4px;
     }
 }
 
-.field::-webkit-input-placeholder {
-    font-style: italic;
-    color: #888;
-}
-.field:-moz-placeholder {
-    font-style: italic;
-    color: #888;
-}
-.field::-moz-placeholder {
-    font-style: italic;
-    color: #888;
-}
-.field:-ms-input-placeholder {
-    font-style: italic;
-    color: #888;
-}
 
-
-// _large
-
-.field_large {
-    width: 200px;
-}
 
 
 // placeholder styling
 
-.field::-webkit-input-placeholder {font-style: normal; color: #b3b3b3; }
-.field:-moz-placeholder { font-style: normal; color: #b3b3b3; }
-.field::-moz-placeholder { font-style: normal; color: #b3b3b3; }
-.field:-ms-input-placeholder { font-style: normal; color: #b3b3b3; }
+.field::-webkit-input-placeholder { color: #b3b3b3; }
+.field:-moz-placeholder { color: #b3b3b3; }
+.field::-moz-placeholder { color: #b3b3b3; }
+.field:-ms-input-placeholder { color: #b3b3b3; }
 
 .field:hover::-webkit-input-placeholder { color: #7e7e7e; }
 .field:hover:-moz-placeholder { color: #7e7e7e; }
@@ -59,3 +37,14 @@ $ie8-padding: 4px;
 .field:focus:-moz-placeholder { color: #7e7e7e; @include transition(none); }
 .field:focus::-moz-placeholder { color: #7e7e7e; @include transition(none); }
 .field:focus:-ms-input-placeholder { color: #7e7e7e; @include transition(none); }
+
+
+// _wide
+
+.field_wide {
+    width: 200px;
+}
+
+.field_narrow {
+    width: 50px;
+}
