--- a/sass/blocks/_header.scss
+++ b/sass/blocks/_header.scss
@@ -1,6 +1,8 @@
 .header {
-
+    position: relative;
 }
     .header__logo {
-
+        position: absolute;
+        left: 10px;
+        top: 10px;
     }
