--- a/sass/blocks/_title.scss
+++ b/sass/blocks/_title.scss
@@ -2,14 +2,17 @@
     display: block; //in case of <a>
     text-decoration: none;
     font-size: 18px;
+    line-height: 20px;
     color: $heading-color;
     a { text-decoration: none; }
 }
 
 .title_large {
     font-size: 24px;
+    line-height: 24px;
 }
 
 .title_small {
     font-size: 16px;
+    line-height: 19px;
 }
