--- a/sass/blocks/_icon.scss
+++ b/sass/blocks/_icon.scss
@@ -1,28 +1,13 @@
-$icon-size: 16px;
-
 .icon {
     position: relative;
     display: inline-block;
     vertical-align: middle;
-    width: $icon-size;
-    height: $icon-size;
-    top: -1px; // for better vertical aligning
-    background: url( $img-path + 'icon_' + $icon-size  + '.png' ) no-repeat;
+    top: -1px;
+    background: url($sprite) no-repeat;
 }
 
-.icon_star      { background-position: #{-($icon-size*0)} #{-($icon-size*0)}; }
-.icon_magnifier { background-position: #{-($icon-size*1)} #{-($icon-size*0)}; }
-
-
-// _large
-
-$icon-size: 24px;
-
-.icon_large {
-    width: $icon-size;
-    height: $icon-size;
-    background-image: url( $img-path + 'icon_' + $icon-size  + '.png' );
+.icon_some-icon-title {
+    width: 16px;
+    height: 16px;
+    background-position: -100px -100px;
 }
-
-.icon_large.icon_star      { background-position: #{-($icon-size*0)} #{-($icon-size*0)}; }
-.icon_large.icon_magnifier { background-position: #{-($icon-size*1)} #{-($icon-size*0)}; }
