--- a/sass/_blocks.scss
+++ b/sass/_blocks.scss
@@ -5,6 +5,7 @@
 @import 'blocks/table';
 @import 'blocks/video';
 @import 'blocks/wysiwyg';
+@import 'blocks/clearfix';
 @import 'blocks/ancients';
 @import 'blocks/logo';
 @import 'blocks/copyright';
