--- a/sass/blocks/_title.scss
+++ b/sass/blocks/_title.scss
@@ -1,10 +1,9 @@
 .title {
-    display: block; //in case of <a>
+    display: block;
     text-decoration: none;
     font-size: 18px;
     line-height: 20px;
     color: $heading-color;
-    a { text-decoration: none; }
 }
 
 .title_large {
