--- a/sass/style.scss
+++ b/sass/style.scss
@@ -1,15 +1,14 @@
 @charset "utf-8";
 
-$img-path:       "../images/";
-$img-path-fixes: "../images/fixes/";
-$font-path:      "../fonts/";
+$img-path:  "../images/";
+$sprite:    "../images/sprite.png";
+$font-path: "../fonts/";
 
 @import 'compass/css3';      // compass framework mixins for great justice
 @import 'mixins';            // app mixins
 @import 'fonts';             // font-face and font-family
 @import 'normalize';         // normalize from h5bp
-@import 'reset';             // reset of html margins, paddings etc.
+@import 'reset';             // reset of html default styles like margins, paddings etc.
 @import 'initialization';    // style init like default font, link colors etc.
 @import 'blocks';            // blocks - primary code
-@import 'helpers';           // helpers style like clearfix
 @import 'print';             // print style from h5bp
