--- a/css/table.css
+++ b/css/table.css
@@ -1,28 +1,38 @@
 .table {
-    width: 100%;
-    color: #7d7d7d;
+    background: #eee;
 /*
     border-collapse: separate; // to separate cells by free space (but here goes extra pixel between thead and tbody - can be removed by removing this tags)
     border-spacing: 1px;       // to separate cells by free space (but here goes extra pixel between thead and tbody - can be removed by removing this tags)
 */
 }
 
-.table td,
-.table th {
-    padding: 5px 10px 3px;
-    border: 1px solid #fff;
-}
+    .table__head {
+        background: #d5e1ee;
+    }
+        .table__head__row {
 
-.table th {
-    background: #d5e1ee;
-    text-align: center;
-    color: #333;
-}
+        }
+            .table__head__row__cell {
+                padding: 5px 10px 3px;
+                border: 1px solid #fff;
+                text-align: center;
+            }
 
-.table td {
-    background: #f4f4f4;
-}
 
-.table tr:nth-child(odd) td {
-    background: #f8f8f8;
-}
+    .table__body {
+
+    }
+        .table__body {
+
+        }
+            .table__body__row {
+
+            }
+                .table__body__row__cell {
+                    padding: 5px 10px 3px;
+                    border: 1px solid #fff;
+                }
+
+            .table__body__row:nth-child(odd) {
+                background: #f4f4f4;
+            }
