--- a/css/page.css
+++ b/css/page.css
@@ -6,13 +6,13 @@
     }
 
     .page__nav {
-
+        margin: 20px 0 0;
     }
 
     .page__body {
-
+        margin: 20px 0 0;
     }
 
     .page__footer {
-
+        margin: 20px 0 0;
     }
