--- a/css/button.css
+++ b/css/button.css
@@ -1,9 +1,12 @@
 .button {
+    outline: none;
     -webkit-box-sizing: border-box;
+       -moz-box-sizing: border-box;
             box-sizing: border-box;
     display: inline-block;
-    vertical-align: middle;
+    vertical-align: top;
     white-space: nowrap;
+    width: 100%;
     height: 24px;
     line-height: 24px;
     padding: 0 8px;
@@ -12,9 +15,11 @@
     background: -webkit-linear-gradient(#00a7e1, #0095da 50%, #008cd2 51%, #0075c6);
     background:         linear-gradient(#00a7e1, #0095da 50%, #008cd2 51%, #0075c6);
     border-radius: 4px;
+    text-align: center;
     box-shadow: inset 0 0 0 1px rgba(255,255,255,.25);
     font-size: 12px;
     color: #fff;
+    cursor: pointer;
 }
 
 .button:hover {
