--- a/css/field.css
+++ b/css/field.css
@@ -1,43 +1,48 @@
 .field {
-    -webkit-box-sizing: border-box;
-            box-sizing: border-box;
-    display: inline-block;
-    vertical-align: middle;
-    height: 26px;
-    width: 110px;
-    padding: 0 9px;
-    border: 1px solid #c3c3c3;
-    border-radius: 2px;
-    font-size: 12px;
-    color: #333;
+
 }
 
-textarea.field {
-    padding-top: 6px;
-    padding-bottom: 6px;
-    height: 60px;
-    resize: vertical;
-}
+    .field__label {
+        margin: 0 0 6px;
+        padding: 0 10px;
+        font-size: 13px;
+    }
 
-.field::-webkit-input-placeholder { color: #b3b3b3; }
-.field::-moz-placeholder { color: #b3b3b3; }
-.field:-ms-input-placeholder { color: #b3b3b3; }
+    .field__input {
+        outline: none;
+        -webkit-box-sizing: border-box;
+           -moz-box-sizing: border-box;
+                box-sizing: border-box;
+        display: inline-block;
+        vertical-align: top;
+        width: 100%;
+        height: 26px;
+        padding: 0 9px;
+        border: 1px solid #c3c3c3;
+        border-radius: 2px;
+        font-size: 12px;
+        color: #333;
+    }
 
-.field:hover::-webkit-input-placeholder { color: #7e7e7e; }
-.field:hover::-moz-placeholder { color: #7e7e7e; }
-.field:hover:-ms-input-placeholder { color: #7e7e7e; }
+    textarea.field__input {
+        padding-top: 6px;
+        padding-bottom: 6px;
+        height: 60px;
+        resize: vertical;
+    }
 
-.field:focus::-webkit-input-placeholder { color: #7e7e7e; }
-.field:focus::-moz-placeholder { color: #7e7e7e; }
-.field:focus:-ms-input-placeholder { color: #7e7e7e; }
+    .field__input::-webkit-input-placeholder { color: #b3b3b3; }
+    .field__input::-moz-placeholder { color: #b3b3b3; }
+    .field__input:-ms-input-placeholder { color: #b3b3b3; }
 
+    .field__input:hover::-webkit-input-placeholder { color: #7e7e7e; }
+    .field__input:hover::-moz-placeholder { color: #7e7e7e; }
+    .field__input:hover:-ms-input-placeholder { color: #7e7e7e; }
 
+    .field__input:focus::-webkit-input-placeholder { color: #7e7e7e; }
+    .field__input:focus::-moz-placeholder { color: #7e7e7e; }
+    .field__input:focus:-ms-input-placeholder { color: #7e7e7e; }
 
-.field_wide {
-    width: 200px;
-}
-
-
-.field_narrow {
-    width: 50px;
-}
+    .field__note {
+        margin: 6px 0 0;
+    }
