Droped some paddings in reset, refreshed init

--- a/css/_reset.css
+++ b/css/_reset.css
@@ -4,7 +4,7 @@ blockquote, fieldset {
     margin: 0;
 }
 
-ul, ol, menu, hr, fieldset {
+ul, ol, menu, hr, fieldset, td, th {
     padding: 0;
 }
 
