--- a/css/_initialization.css
+++ b/css/_initialization.css
@@ -5,6 +5,7 @@ html {
 /*
     font: 12px / 18px "Trebuchet MS", "Lucida Grande", "Lucida Sans Unicode", "Lucida Sans", Tahoma, sans-serif;
     font: 12px / 18px Tahoma, Verdana, Segoe, sans-serif;
+    font: 12px / 18px Verdana, Geneva, sans-serif;
     font: 12px / 18px Calibri, Candara, Segoe, "Segoe UI", Optima, Arial, sans-serif;
 */
     color: #222;
