--- a/css/_initialization.css
+++ b/css/_initialization.css
@@ -3,10 +3,10 @@ html {
     background: #e3e3e3 url(../images/background.png);
     font-family: "HelveticaNeue-Light", "Helvetica Neue Light", "Helvetica Neue", Helvetica, Arial, "Lucida Grande", sans-serif;
 /*
-    font: 12px / 18px "Trebuchet MS", "Lucida Grande", "Lucida Sans Unicode", "Lucida Sans", Tahoma, sans-serif;
-    font: 12px / 18px Tahoma, Verdana, Segoe, sans-serif;
-    font: 12px / 18px Verdana, Geneva, sans-serif;
-    font: 12px / 18px Calibri, Candara, Segoe, "Segoe UI", Optima, Arial, sans-serif;
+    font-family: "Trebuchet MS", "Lucida Grande", "Lucida Sans Unicode", "Lucida Sans", Tahoma, sans-serif;
+    font-family: Tahoma, Verdana, Segoe, sans-serif;
+    font-family: Verdana, Geneva, sans-serif;
+    font-family: Calibri, Candara, Segoe, "Segoe UI", Optima, Arial, sans-serif;
 */
 }
 
