--- a/css/_button.css
+++ b/css/_button.css
@@ -3,8 +3,7 @@
     -webkit-box-sizing: border-box;
        -moz-box-sizing: border-box;
             box-sizing: border-box;
-    display: inline-block;
-    vertical-align: top;
+    display: block;
     white-space: nowrap;
     width: 100%;
     height: 24px;
