--- a/css/_field.css
+++ b/css/_field.css
@@ -33,14 +33,17 @@
     .field__input::-webkit-input-placeholder { color: #b3b3b3; }
     .field__input::-moz-placeholder { color: #b3b3b3; }
     .field__input:-ms-input-placeholder { color: #b3b3b3; }
+    .field__input.placeholder { color: #b3b3b3; }
 
     .field__input:hover::-webkit-input-placeholder { color: #7e7e7e; }
     .field__input:hover::-moz-placeholder { color: #7e7e7e; }
     .field__input:hover:-ms-input-placeholder { color: #7e7e7e; }
+    .field__input.placeholder:hover { color: #7e7e7e; }
 
     .field__input:focus::-webkit-input-placeholder { color: #7e7e7e; }
     .field__input:focus::-moz-placeholder { color: #7e7e7e; }
     .field__input:focus:-ms-input-placeholder { color: #7e7e7e; }
+    .field__input.placeholder:focus { color: #7e7e7e; }
 
     .field__note {
         margin: 6px 0 0;
