--- a/css/_3_reset.css
+++ b/css/_3_reset.css
@@ -4,7 +4,7 @@ blockquote, fieldset {
     margin: 0;
 }
 
-ul, ol, menu, hr, fieldset, td, th {
+ul, ol, menu, hr, fieldset, td, th, button {
     padding: 0;
 }
 
