--- a/css/_field.css
+++ b/css/_field.css
@@ -17,6 +17,7 @@
         width: 100%;
         height: 26px;
         padding: 0 9px;
+        background: #fff;
         border: 1px solid #c3c3c3;
         border-radius: 2px;
         font-size: 12px;
@@ -27,23 +28,22 @@
         padding-top: 6px;
         padding-bottom: 6px;
         height: 60px;
-        resize: vertical;
     }
 
     .field__input::-webkit-input-placeholder { color: #b3b3b3; }
-    .field__input::-moz-placeholder { color: #b3b3b3; }
-    .field__input:-ms-input-placeholder { color: #b3b3b3; }
-    .field__input.placeholder { color: #b3b3b3; }
+    .field__input::-moz-placeholder          { color: #b3b3b3; }
+    .field__input:-ms-input-placeholder      { color: #b3b3b3; }
+    .field__input.placeholder                { color: #b3b3b3; }
 
     .field__input:hover::-webkit-input-placeholder { color: #7e7e7e; }
-    .field__input:hover::-moz-placeholder { color: #7e7e7e; }
-    .field__input:hover:-ms-input-placeholder { color: #7e7e7e; }
-    .field__input.placeholder:hover { color: #7e7e7e; }
+    .field__input:hover::-moz-placeholder          { color: #7e7e7e; }
+    .field__input:hover:-ms-input-placeholder      { color: #7e7e7e; }
+    .field__input.placeholder:hover                { color: #7e7e7e; }
 
     .field__input:focus::-webkit-input-placeholder { color: #7e7e7e; }
-    .field__input:focus::-moz-placeholder { color: #7e7e7e; }
-    .field__input:focus:-ms-input-placeholder { color: #7e7e7e; }
-    .field__input.placeholder:focus { color: #7e7e7e; }
+    .field__input:focus::-moz-placeholder          { color: #7e7e7e; }
+    .field__input:focus:-ms-input-placeholder      { color: #7e7e7e; }
+    .field__input.placeholder:focus                { color: #7e7e7e; }
 
     .field__note {
         margin: 6px 0 0;
