--- a/css/_3_reset.css
+++ b/css/_3_reset.css
@@ -1,50 +1,40 @@
-p, ul, ol, dl, menu, hr,
-h1, h2, h3, h4, h5, h6,
-blockquote, fieldset {
-    margin: 0;
-}
-
-ul, ol, menu,
-hr, fieldset,
-td, th {
-    padding: 0;
-}
-
-input, button, fieldset, textarea, hr {
-    border: none;
-}
-
 ul, ol, menu {
+    margin: 0;
+    padding: 0;
     list-style: none;
 }
 
+
+hr,
+fieldset {
+    margin: 0;
+    padding: 0;
+    border: none;
+}
+
+
+p, dl, blockquote {
+    margin: 0;
+}
+
+
 h1, h2, h3, h4, h5, h6 {
+    margin: 0;
+    font-weight: inherit;
     font-size: inherit;
 }
 
-h1, h2, h3, h4, h5, h6,
-th, input {
-    font-weight: inherit;
-}
 
-button,
-input,
-select,
-textarea {
-    font-family: inherit;
+iframe,
+img,
+video {
+    vertical-align: top;
 }
 
 
-button,
-input,
-select,
-textarea,
-a {
-    color: inherit;
-}
-
-a {
-    text-decoration: none;
+table {
+    vertical-align: top;
+    width: 100%;
 }
 
 thead,
@@ -52,29 +42,41 @@ tbody {
     vertical-align: inherit;
 }
 
-iframe,
-img,
-video,
-table,
-input,
-button,
-select,
-textarea {
-    vertical-align: top;
-}
-
 th {
+    font-weight: inherit;
     text-align: inherit;
 }
 
-table {
-    width: 100%;
+th,
+td {
+    padding: 0;
 }
 
-a {
+
+a,
+label {
     display: block;
 }
 
+a {
+    color: inherit;
+    text-decoration: none;
+}
+
+label[for] {
+    cursor: pointer;
+}
+
+
+button,
+select,
+input,
+textarea {
+    vertical-align: top;
+    font-weight: inherit;
+    font-family: inherit;
+    color: inherit;
+}
 
 
 button,
@@ -85,17 +87,30 @@ button,
     width: 100%;
     padding: 0;
     background: none;
+    border: none;
     text-align: inherit;
 }
+
+
+[type="text"],
+[type="email"],
+[type="tel"],
+[type="url"],
+[type="search"],
+[type="password"],
+textarea {
+    padding: 0;
+    border: none;
+    width: 100%;
+    background: none;
+}
+
 
 textarea {
     resize: vertical;
 }
 
-label[for] {
-    cursor: pointer;
-}
 
 ::-webkit-input-placeholder { font-style: normal; }
-::-moz-placeholder { font-style: normal; }
-:-ms-input-placeholder { font-style: normal; }
+::-moz-placeholder          { font-style: normal; }
+:-ms-input-placeholder      { font-style: normal; }
