--- a/css/_3_reset.css
+++ b/css/_3_reset.css
@@ -1,3 +1,11 @@
+*,
+input[type="search"] {
+    -webkit-box-sizing: border-box;
+       -moz-box-sizing: border-box;
+            box-sizing: border-box;
+}
+
+
 ul, ol, menu {
     margin: 0;
     padding: 0;
@@ -54,6 +62,7 @@ td {
 
 
 a,
+span,
 label {
     display: block;
 }
