--- a/css/_4_initialization.css
+++ b/css/_4_initialization.css
@@ -1,6 +1,7 @@
 html {
     min-width: 1000px;
-    background: #e3e3e3 url(../images/background.png);
+    height: 100%;
+    background: #e3e3e3;
     font-family: "HelveticaNeue-Light", "Helvetica Neue Light", "Helvetica Neue", Helvetica, Arial, "Lucida Grande", sans-serif;
 /*
     font-family: "Trebuchet MS", "Lucida Grande", "Lucida Sans Unicode", "Lucida Sans", Tahoma, sans-serif;
@@ -9,13 +10,6 @@ html {
     font-family: Calibri, Candara, Segoe, "Segoe UI", Optima, Arial, sans-serif;
 */
 }
-
-::-moz-selection {
-    background: #b3d4fc;
-    text-shadow: none;
-}
-
-::selection {
-    background: #b3d4fc;
-    text-shadow: none;
-}
+    body {
+        height: 100%;
+    }
