--- a/css/_breadcrumbs.css
+++ b/css/_breadcrumbs.css
@@ -1,11 +1,26 @@
 .breadcrumbs {
-    margin: 0 -4px;
-    cursor: default;
+
 }
     .breadcrumbs__item {
         display: inline-block;
-        vertical-align: top;
-        margin: 0 4px;
+        position: relative;
+        margin: 0 0 0 20px;
+    }
+
+    .breadcrumbs__item:first-child {
+        margin-left: 0;
+    }
+
+    .breadcrumbs__item:before {
+        content: '/';
+        position: absolute;
+        right: 100%;
+        top: 0;
+        margin: 0 8px 0 0;
+    }
+
+    .breadcrumbs__item:first-child:before {
+        display: none;
     }
 
         .breadcrumbs__item__link {
