--- a/css/_content.css
+++ b/css/_content.css
@@ -1,14 +1,21 @@
 .content {
 
 }
-    .content__header {
+    .content__head {
 
     }
+        .content__head__breadcrumbs {
+
+        }
 
     .content__body {
-        margin: 20px 0 0;
+        margin: 50px 0 0;
     }
+        .content__body__section {
+            margin: 100px 0 0;
+        }
 
-    .content__body:first-child {
-        margin-top: 0;
-    }
+        .content__body__section:first-child {
+            margin-top: 0;
+        }
+
