--- a/css/_sidebar.css
+++ b/css/_sidebar.css
@@ -1,10 +1,10 @@
 .sidebar {
 
 }
-    .sidebar__item {
+    .sidebar__section {
         margin: 20px 0 0;
     }
 
-    .sidebar__item:first-child {
+    .sidebar__section:first-child {
         margin-top: 0;
     }
