--- a/css/_title.css
+++ b/css/_title.css
@@ -3,12 +3,7 @@
     line-height: 20px;
 }
 
-.title_large {
+.title_larger {
     font-size: 24px;
     line-height: 24px;
-}
-
-.title_small {
-    font-size: 16px;
-    line-height: 19px;
 }
