--- a/css/style.css
+++ b/css/style.css
@@ -4,12 +4,12 @@
 @import url(_4_initialization.css);
 
 @import url(_ancients.css);
+@import url(_article.css);
 @import url(_body.css);
 @import url(_breadcrumbs.css);
 @import url(_button.css);
 @import url(_clearfix.css);
 @import url(_content.css);
-@import url(_copyright.css);
 @import url(_field.css);
 @import url(_footer.css);
 @import url(_header.css);
@@ -18,11 +18,9 @@
 @import url(_logo.css);
 @import url(_nav.css);
 @import url(_page.css);
-@import url(_pagination.css);
 @import url(_region.css);
 @import url(_sidebar.css);
 @import url(_table.css);
-@import url(_time.css);
 @import url(_title.css);
 @import url(_video.css);
 @import url(_wysiwyg.css);
