--- a/css/style.css
+++ b/css/style.css
@@ -10,7 +10,8 @@
 @import url(_button.css);
 @import url(_clearfix.css);
 @import url(_content.css);
-@import url(_field.css);
+@import url(_input.css);
+@import url(_form.css);
 @import url(_footer.css);
 @import url(_header.css);
 @import url(_icon.css);
