--- a/css/style.css
+++ b/css/style.css
@@ -12,6 +12,7 @@
 @import url(_content.css);
 @import url(_input.css);
 @import url(_form.css);
+@import url(_jcarousel.css);
 @import url(_footer.css);
 @import url(_header.css);
 @import url(_icon.css);
