Refreshed css globals

--- a/css/style.css
+++ b/css/style.css
@@ -1,12 +1,11 @@
 @import url(_1_fonts.css);
 @import url(_2_normalize.css);
-@import url(_3_reset.css);
-@import url(_4_initialization.css);
+@import url(_3_init.css);
 
-@import url(_ancients.css);
 @import url(_article.css);
 @import url(_body.css);
 @import url(_breadcrumbs.css);
+@import url(_browserupgrade.css);
 @import url(_button.css);
 @import url(_clearfix.css);
 @import url(_content.css);
