Reorganize project using gulp

--- a/public/layouts/index.html
+++ b/public/layouts/index.html
@@ -9,10 +9,7 @@
         <!-- In case of responsive design
         <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
         -->
-
-        <link rel="apple-touch-icon" href="apple-touch-icon.png">
-
-        <link rel="stylesheet" href="css/style.css">
+        <link rel="stylesheet" href="../styles/style.css">
 
     </head>
 
@@ -149,6 +146,7 @@
                                                         <li>Sed auctor ullamcorper consequat. Aliquam erat volutpat. Cras nisi ipsum, consequat ut adipiscing quis, dignissim sed eros. In hac habitasse platea dictumst. Donec sit amet leo at elit egestas laoreet at dapibus diam.</li>
                                                         <li>Phasellus in tortor sapien, non feugiat urna. Mauris ut pellentesque erat. Donec lacinia adipiscing quam, faucibus aliquam velit hendrerit in. Etiam pulvinar magna sed tortor malesuada et imperdiet justo auctor.</li>
                                                     </ol>
+                                                    <img src="../content/product.jpg" width="300" height="300" alt="">
                                                 </div>
 
 
@@ -359,10 +357,8 @@
 
 
 
-        <script src="js/jquery-2.1.1.min.js"></script>
-        <script src="js/jcarousel-0.3.1.js"></script>
-        <script src="js/jquery.placeholder.js"></script>
-        <script src="js/app.js"></script>
+        <script src="../vendors/jquery/jquery-2.2.3.min.js"></script>
+        <script src="../scripts/temp.js"></script>
 
 
     </body>
